--- a/views/adminpage.hbs
+++ b/views/adminpage.hbs
@@ -55,15 +55,27 @@
           <p id="maintext"></p>
           <form id="universalForm"  role="form" method="POST">
             <input id="btid" type="hidden" name="id"/>
+            <input id="btparent_id" type="hidden" name="parent_id"/>
             <input id="bttype" type="hidden" name="type"/>
             <p id="bttext" style="color:red"></p>
             <input id="btname" size="30" type="text" name="name" placeholder="name"/> 
-            <input id="btsubname" size="30" type="text" name="subname" placeholder="sub-type name" style="margin-top:10px;"/> 
-            <input id="btmessage" size="30" type="text" name="message" placeholder="message" style="margin-top:10px;"/>
-            <input id="btprice" size="10" type="text" name="price" placeholder="price, USD" style="margin-top:10px;"/> 
+            <input id="btsubname" size="30" type="text" name="subname" placeholder="sub-type name (for first column)" style="margin-top:10px;"/> 
+            
+            <span id="btradio" style="color:black">
+              <br/>
+              <p>info type (for second column) :</p>
+              <input type="radio" name="displaytype" onclick="btmessage.style.display = 'none'; bturl.style.display = 'none';" value="occupancy" checked> &nbsp; display current occupancy<br/>
+              <input type="radio" name="displaytype" onclick="btmessage.style.display = 'block'; bturl.style.display = 'none';"  value="message"> &nbsp; display message<br/>
+              <input type="radio" name="displaytype" onclick="btmessage.style.display = 'none'; bturl.style.display = 'block';"  value="webpage"> &nbsp; link to a web page
+              <br/>
+            </span>
+            <input id="btmessage" size="30" type="text" name="message" placeholder="please type the message" style="margin-top:10px;display: none"/>
+            <input id="bturl" size="30" type="text" name="url" placeholder="please add webpage address" style="margin-top:10px;display: none"/>
+            <input id="btprice" size="10" type="text" name="price" placeholder="price, USD" style="margin-top:10px;display: none"/>
+            <input id="btbookmsg" size="30" type="text" name="bookmsg" placeholder="book message (for third column)" style="margin-top:10px;display: none"/>
             <br/>
-            <button id="Submit" class="button1" onclick="formSubmit()">Submit</button>
-            <button type="button" class="button2" onclick="modal.style.display = 'none';">Cancel</button>
+            <button id="Submit" class="button1" onclick="formSubmit()" style="margin-top:10px;">Submit</button>
+            <button type="button" class="button2" onclick="modal.style.display = 'none';" style="margin-top:10px;">Cancel</button>
 
           </form>
           <br/>
@@ -82,11 +94,14 @@ var modal = document.getElementById('myModal');
 // Get the <span> element that closes the modal
 var span = document.getElementsByClassName("close")[0];
 
+
+
 // When the user clicks the button, open the modal 
-//( 11, '{{id}}', '{{name}}','sub-name','message',0, 'Edit the booking type name:', '')
-function showModal(type, idn, name, subname, message, price, maintext) {
-    //console.log("IDN1="+idn);
-    //console.log("NAME1="+name);
+//( 11, '{{id}}', '{{name}}','sub-name','message',0, 'Edit the header type name:', '')
+function showModal(type, idn, parent_id, name, subname, message, price, maintext, url, bookmsg) {
+    console.log("IDN1="+idn);
+    console.log("NAME1="+name);
+    console.log("message="+message);
 
     modal.style.display = "block";
 
@@ -94,32 +109,50 @@ function showModal(type, idn, name, subname, message, price, maintext) {
 
     fe.type.setAttribute('value',type);
     fe.idn.setAttribute('value',idn);
+    fe.parent_id.setAttribute('value',parent_id);
     fe.dname.setAttribute('value',name);
     fe.dsubname.setAttribute('value',subname);
     fe.dmessage.setAttribute('value',message);
+    fe.durl.setAttribute('value',url);
+    fe.dbookmsg.setAttribute('value',bookmsg);
     fe.dprice.setAttribute('value',price);
     fe.dtext.innerHTML = name;
     fe.dmaintext.innerHTML = maintext;
 
-    fe.dtext.style.display = 'none'; 
-    if ( type == 12 || type == 20 || type == 22 || type == 32 || type == 42 ) fe.dtext.style.display = 'block';
-    if ( type == 12 || type == 20 || type == 22 || type == 32 || type == 42 ) fe.dname.style.display = 'none'; 
-                                                else fe.dname.style.display = 'block';
+
+    fe.dtext.style.display = 'block'; if ( type == 10 || type == 11 ) fe.dtext.style.display = 'none';
+    
+    fe.dname.style.display = 'none'; if ( type == 10 || type == 11 ) fe.dname.style.display = 'block';
+    
     if ( type < 14 || type == 22 || type == 32 || type == 42 ) fe.dsubname.style.display = 'none'; 
-                                                else fe.dsubname.style.display = 'block';
-    if ( type != 22 || type != 32 || type != 42 ) fe.dmessage.style.display = 'none'; 
-                                                else fe.dmessage.style.display = 'block';
-    if ( type < 34 ) fe.dprice.style.display = 'none'; else fe.dprice.style.display = 'block';
+      else fe.dsubname.style.display = 'block';
+    
+    if ( type < 14 ) fe.dradio.style.display = 'none'; 
+      else fe.dradio.style.display = 'block';
+    if ( type < 14 ) fe.dbookmsg.style.display = 'none'; 
+      else fe.dbookmsg.style.display = 'block';
+
 }
+
+//function showModalByTypes(subtypes) {
+//  console.log('modalbytpes = '+subtypes);
+//      modal.style.display = "block";
+//    var fe = getElementVars();
+//    fe.type.setAttribute('value',subtypes);
+//}
 
 function getElementVars(){
   var fe = new Object();
     fe.type = document.getElementById('bttype');
     fe.idn = document.getElementById('btid');    
+    fe.parent_id = document.getElementById('btparent_id');
     fe.dname = document.getElementById('btname');        
-    fe.dsubname = document.getElementById('btsubname');  
-    fe.dmessage = document.getElementById('btmessage');  
-    fe.dprice = document.getElementById('btprice');      
+    fe.dsubname = document.getElementById('btsubname');
+    fe.dradio = document.getElementById('btradio');
+    fe.dmessage = document.getElementById('btmessage');
+    fe.durl = document.getElementById('bturl');
+    fe.dprice = document.getElementById('btprice');
+    fe.dbookmsg = document.getElementById('btbookmsg');  
     fe.dtext = document.getElementById('bttext');  
     fe.dmaintext = document.getElementById('maintext');
     fe.labl = document.getElementById('labl');
@@ -141,12 +174,14 @@ window.onclick = function(event) {
 function formSubmit() {
       var fe = getElementVars();
       var idn = fe.idn.value;
+      var parent_id = fe.parent_id.value;
       var name = fe.dname.value;
       var type = fe.type.value;
       var subname = fe.dsubname.value;
       if ( type == 10 ) var act = "/admin/bookingtype/save";
       if ( type == 11 ) var act = "/admin/bookingtype/"+idn+"/update";
-      if ( type == 20 ) var act = "/admin/subbookingtype/"+idn+"/save";
+      if ( type == 20 ) var act = "/admin/subbookingtype/"+parent_id+"/save";
+      if ( type == 21 ) var act = "/admin/subbookingtype/"+idn+"/"+parent_id+"/update";
       //alert("type = "+type);
       document.getElementById('universalForm').setAttribute('action',act).submit();
       return false;
@@ -159,41 +194,43 @@ function formSubmit() {
       <div class="boxedtransp">
         <label id="labl" style="margin-left:5px;">Admin functions: &nbsp; (change any &amp; see tables change, would require password in real life)</label>
         <ul>
-        <li><a onclick="showModal( 10, '', '','sub-name','message',0, 'Add a new booking type:', '')" href="#"> add new booking type </a>
-          <span style="display:inline-block; width: 150px;"></span>
-          <a data-toggle="tooltip" data-placement="bottom" title='deletes all changes made to Mongoose collections, restores all initial entries to collections as if you never had changed anything !' onclick="" href="#">( Undo all changes, restore defaults )</a>
+        <li><a onclick="showModal( 10, '', '', '','sub-name','message',0, 'Add a new header type:', '','', '')" href="#"> add new header type </a>
+          <span style="display:inline-block; width: 80px;"></span>
+          <a data-toggle="tooltip" data-placement="bottom" title='Upon a click it deletes all changes made by you to Mongoose collections, restores all initial entries to collections as if you never had changed anything. Defaults are auto-restored every night at 4 a.m. EST !' onclick="" href="#">( Undo all changes, restore defaults )</a>
         </li>
-        <li><a  href="#"  onclick="myFunction('myDIV')">edit / delete existing booking type</a><br/></li>
+        <li><a  href="#"  onclick="myFunction('myDIV')">edit / delete existing header type</a><br/></li>
         <div id="myDIV" style="display:none">
           
           {{#if list_bookingtypes }}
-            <a  href="#"  onclick="myFunction('myDIV')">&nbsp; &nbsp; &nbsp; - list of existing Booking types - please use relevant buttons:</a>
+            <a  href="#"  onclick="myFunction('myDIV')">&nbsp; &nbsp; &nbsp; - list of existing header types - please use relevant buttons:</a>
           {{else}}
-            <label style="color:green;font-size:14px;">&nbsp; &nbsp; &nbsp; - no Booking types are found</label>
+            <label style="color:green;font-size:14px;">&nbsp; &nbsp; &nbsp; - no header types are found</label>
           {{/if}}
           <ul>
           {{#each list_bookingtypes}}
             <li><span>{{name}}</span> &nbsp; 
-            {{!-- <a class="addn" onclick="showModal( 11, '{{id}}', '{{name}}','sub-name','message',0, 'Edit the booking type name:', '')" href="#"> edit </a> &nbsp; 
-            <a class="addn" onclick="showModal( 12, '{{id}}', '{{name}}','sub-name','message',0, 'Delete the booking type ?', '')" href="#"> delete </a> &nbsp;  --}}
-            <a class="addn" onclick="showModal( 20, '{{id}}', '{{name}}','','message',0, 'Add a new booking SUB-type:', '')" href="#"> add new SUB-type </a>
+            <a class="addn" onclick="showModal( 11, '{{id}}', '', '{{name}}','sub-name','message',0, 'Edit the header type name:', '','', '')" href="#"> edit </a> &nbsp; 
+            <a class="addn" onclick="showModal( 12, '{{id}}', '', '{{name}}','sub-name','message',0, 'Delete the header type ?', '','', '')" href="#"> delete </a> &nbsp;
+            {{!-- <a class="addn" onclick="showModal( 20, '', '{{id}}', '{{name}}','','message',0, 'Add a new booking SUB-type:', '', '', '')" href="#"> add new SUB-type </a> --}}
             <br/>
           {{/each}}
           </ul>
         </div>
 
+        <li><a  href="#"  onclick='showModalByTypes(JSON.stringify("{{list_bookingtypes}}"));' >booking SUB-types of existing header types</a><br/></li>
+
         <li><a  href="#"  onclick="myFunction('myDIV1')">add new booking SUB-type</a><br/></li>
         <div id="myDIV1" style="display:none">
           
           {{#if list_bookingtypes }}
-            <a  href="#"  onclick="myFunction('myDIV1')">&nbsp; &nbsp; &nbsp; - select an existing Booking type &amp; click add button</a>
+            <a  href="#"  onclick="myFunction('myDIV1')">&nbsp; &nbsp; &nbsp; - select an existing header type &amp; click add button</a>
           {{else}}
-            <label style="color:green;font-size:14px;">&nbsp; &nbsp; &nbsp; - no Booking types are found</label>
+            <label style="color:green;font-size:14px;">&nbsp; &nbsp; &nbsp; - no header types are found</label>
           {{/if}}
           <ul>
           {{#each list_bookingtypes}}
             <li><span>{{name}}</span> &nbsp; 
-            <a class="addn" onclick="showModal( 20, '{{id}}', '{{name}}','','message',0, 'Add a new booking SUB-type:', '')" href="#"> add new SUB-type </a>
+            <a class="addn" onclick="showModal( 20, '', '{{id}}', 'Header type: &nbsp; &nbsp;{{name}}','','message',0, 'Add a new booking SUB-type:', '','', '')" href="#"> add new SUB-type </a>
             <br/>
           {{/each}}
           </ul>
@@ -211,19 +248,17 @@ function formSubmit() {
           <ul>
           {{#each list_subbookingtypes}}
             <li><span>{{subname}} &nbsp; &nbsp; ( {{parent.name}} )</span> &nbsp; 
-            <a class="addn" onclick="showModal( 21, '{{id}}', '{{parent.name}}','{{subname}}','message',0, 'Edit the booking SUB-type name:', '')" href="#"> edit </a> &nbsp; 
-            <a class="addn" onclick="showModal( 22, '{{id}}', '{{parent.name}}','{{subname}}','message',0, 'Delete the booking SUB-type ?', '')" href="#"> delete </a> &nbsp; 
+            <a class="addn" onclick="showModal( 21, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','',0, 'Edit the booking SUB-type name:', '','', '')" href="#"> edit </a> &nbsp; 
+            <a class="addn" onclick="showModal( 22, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','message',0, 'Delete the booking SUB-type ?', '','', '')" href="#"> delete </a> &nbsp; 
             <br/>
           {{/each}}
           </ul>
       </div>
 
-        <li><a  href="/admin/addselltype.html">add new sell type</a><br/></li>
-        <li><a  href="/admin/editselltype.html">edit / delete existing sell type</a><br/></li>
         <li><a  href="/admin/addsellsubtype.html">add new sell SUB-type</a><br/></li>
         <li><a  href="/admin/editsellsubtype.html">edit / delete existing sell SUB-type</a><br/></li>
-        <li><a  href="/admin/addinfotype.html">add new info type</a><br/></li>
-        <li><a  href="/admin/editinfotype.html">edit / delete existing info type</a><br/></li>
+        <li><a  href="/admin/addinfosubtype.html">add new info SUB-type</a><br/></li>
+        <li><a  href="/admin/editinfosubtype.html">edit / delete existing info SUB-type</a><br/></li>
         </ul>
       </div>
 
